[gd_scene load_steps=28 format=3 uid="uid://d2f51bq44vxjs"]

[ext_resource type="Script" path="res://game.gd" id="1_0kccu"]
[ext_resource type="PackedScene" uid="uid://fooe8er50ch4" path="res://splat.tscn" id="1_1myov"]
[ext_resource type="Script" path="res://player.gd" id="1_gq48p"]
[ext_resource type="Texture2D" uid="uid://6udo26rcsk6g" path="res://bg1.png" id="1_lqb8i"]
[ext_resource type="Texture2D" uid="uid://cnqfdbfk3ku2a" path="res://shotgun.png" id="2_ikiaq"]
[ext_resource type="Script" path="res://crosshair.gd" id="4_pvr7c"]
[ext_resource type="Texture2D" uid="uid://b1c6ksqah84lc" path="res://crosshair.png" id="5_d4ne7"]
[ext_resource type="Texture2D" uid="uid://ditgv370erq38" path="res://player.png" id="7_5dku7"]
[ext_resource type="PackedScene" uid="uid://4vuub1ds7inx" path="res://virus.tscn" id="9_3piyi"]
[ext_resource type="PackedScene" uid="uid://b8ostwg3ererf" path="res://bullet.tscn" id="9_nocq5"]
[ext_resource type="AudioStream" uid="uid://bevav76o1h3p4" path="res://shoot.wav" id="9_oejyp"]
[ext_resource type="PackedScene" uid="uid://cit27usktohge" path="res://para.tscn" id="9_ovcdo"]
[ext_resource type="AudioStream" uid="uid://btu674pv6ungn" path="res://nom.wav" id="10_bc1jo"]
[ext_resource type="AudioStream" uid="uid://b0kr4gteyyxyj" path="res://ded.wav" id="11_nig44"]
[ext_resource type="PackedScene" uid="uid://binv1xc21g2t6" path="res://nom.tscn" id="12_ilkce"]
[ext_resource type="AudioStream" uid="uid://brjjw3sonm726" path="res://amoebametal.wav" id="12_y454r"]
[ext_resource type="PackedScene" uid="uid://cbb2r78x4rfxy" path="res://algae.tscn" id="13_b08km"]
[ext_resource type="Texture2D" uid="uid://bsegddue72n61" path="res://organ1.png" id="13_kas60"]
[ext_resource type="Texture2D" uid="uid://b4rp0uiryogpu" path="res://nom.png" id="14_8qipd"]
[ext_resource type="Script" path="res://organ_1.gd" id="14_umiyd"]
[ext_resource type="Texture2D" uid="uid://cf0sw30dpvg6r" path="res://organ2.png" id="15_nxbvx"]
[ext_resource type="Texture2D" uid="uid://kuayoddp302n" path="res://oops.png" id="22_j5p7q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xnjgk"]
radius = 29.0

[sub_resource type="LabelSettings" id="LabelSettings_rbqb7"]
font_size = 30
font_color = Color(0.0431373, 0.0431373, 0.329412, 1)
shadow_color = Color(0.662745, 0.776471, 1, 0.431373)

[sub_resource type="LabelSettings" id="LabelSettings_d61fu"]
font_color = Color(0.054902, 0.443137, 0.168627, 1)
shadow_color = Color(0.862745, 0.929412, 0, 0.760784)

[sub_resource type="LabelSettings" id="LabelSettings_b5bmt"]
font_size = 44
font_color = Color(0.00529946, 3.64365e-07, 0.00540282, 1)
outline_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_ib6mc"]
font_color = Color(0.162439, 1.88913e-05, 0.162682, 1)

[node name="game" type="Node2D"]
script = ExtResource("1_0kccu")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.75, 0.75)
motion_mirroring = Vector2(4096, 4096)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("1_lqb8i")
centered = false

[node name="SplatLayer" type="Node2D" parent="."]

[node name="NomLayer" type="Node2D" parent="."]

[node name="splat" parent="." instance=ExtResource("1_1myov")]

[node name="crosshair" type="Node2D" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("4_pvr7c")
camera = NodePath("../Player/Camera2D")

[node name="Sprite2D" type="Sprite2D" parent="crosshair"]
texture = ExtResource("5_d4ne7")

[node name="Player" type="CharacterBody2D" parent="." node_paths=PackedStringArray("crosshair")]
unique_name_in_owner = true
position = Vector2(324, 193)
script = ExtResource("1_gq48p")
crosshair = NodePath("../crosshair")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("7_5dku7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_xnjgk")

[node name="shotgun" type="Node2D" parent="Player"]

[node name="shotgun_sprite" type="Sprite2D" parent="Player/shotgun"]
position = Vector2(6, 1)
texture = ExtResource("2_ikiaq")
offset = Vector2(14.61, 0)

[node name="tip" type="Node2D" parent="Player/shotgun"]
position = Vector2(46, -2)

[node name="Camera2D" type="Camera2D" parent="Player"]
unique_name_in_owner = true
position_smoothing_enabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("9_oejyp")

[node name="NomSoundPlayer" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("10_bc1jo")

[node name="DedSoundPlayer" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("11_nig44")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("12_y454r")
volume_db = -8.851
autoplay = true

[node name="Organ1" type="Sprite2D" parent="Player"]
position = Vector2(-8, -10)
texture = ExtResource("13_kas60")
script = ExtResource("14_umiyd")

[node name="Organ2" type="Sprite2D" parent="Player"]
position = Vector2(6, 14)
texture = ExtResource("15_nxbvx")
script = ExtResource("14_umiyd")

[node name="Para" parent="." instance=ExtResource("9_ovcdo")]

[node name="Algae" parent="." instance=ExtResource("13_b08km")]

[node name="Bullet" parent="." instance=ExtResource("9_nocq5")]

[node name="nom" parent="." instance=ExtResource("12_ilkce")]

[node name="virus" parent="." instance=ExtResource("9_3piyi")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimeLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 42.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "10:00"
label_settings = SubResource("LabelSettings_rbqb7")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(778, 26)
scale = Vector2(2.15, 2.15)
texture = ExtResource("14_8qipd")

[node name="NomCountLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 799.0
offset_top = 13.0
offset_right = 839.0
offset_bottom = 36.0
text = "
"
label_settings = SubResource("LabelSettings_d61fu")

[node name="winlabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 265.0
offset_top = 135.0
offset_right = 305.0
offset_bottom = 158.0
text = "A WINNER IS YOU!!
KILLS:{k}
NOMS:{n}
OOPSIES:{o}"
label_settings = SubResource("LabelSettings_b5bmt")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(777, 61)
scale = Vector2(1.51, 1.51)
texture = ExtResource("22_j5p7q")

[node name="OopsLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 802.0
offset_top = 50.0
offset_right = 842.0
offset_bottom = 73.0
text = "123"
label_settings = SubResource("LabelSettings_ib6mc")
